--- a/javascript/profile-package/user-card.handlebars
+++ b/javascript/profile-package/user-card.handlebars
@@ -29,15 +29,15 @@
           {{#if isEditable}}
             <span class="dropdown">
               <span class="dropdown-toggle">
-                Edit profile
+                Voeg profiel toe
                 <span class="caret"></span>
               </span>
               <ul class="dropdown-menu no-submenus">
                   {{#if isFullyEditable}}
-                  <li><a class="edit-basic-info" href="javascript:void(0)">Edit basic info</a></li>
+                  <li><a class="edit-basic-info" href="javascript:void(0)">Voeg algemene info toe</a></li>
                   {{/if}}
                   <li><a class="edit-display-case" href="javascript:void(0)">Edit display case</a></li>
-                  <li><a class="edit-avatar" href="javascript:void(0)">Edit avatar</a></li>
+                  <li><a class="edit-avatar" href="javascript:void(0)">Voeg avatar toe</a></li>
                   {{#if isFullyEditable}}
                   <li><a class="edit-visibility" href="javascript:void(0)">Toggle privacy setting</a></li>
                   {{/if}}
