--- a/javascript/profile-package/profile.handlebars
+++ b/javascript/profile-package/profile.handlebars
@@ -45,7 +45,7 @@
             </ul>
         </li>
         <li>
-            <span class="inactive link-section-header">Vital statistics</span>
+            <span class="inactive link-section-header">Belangrijke statistieken</span>
             <ul class="second-tier">
                 <li>
                     <a href="{{profileRoot}}vital-statistics/activity"
