--- a/javascript/video-package/video-description.handlebars
+++ b/javascript/video-package/video-description.handlebars
@@ -2,7 +2,7 @@
 <link itemprop="url" href="{{ topic.extended_slug }}/v/{{ video.readable_id }}">
 {{/if}}
 {{#if video.button_top_exercise }}
-<a href="{{ video.button_top_exercise.url }}" class="practice simple-button green desktop-only" title="Test your understanding with an exercise">Practice this concept</a>
+<a href="{{ video.button_top_exercise.url }}" class="practice simple-button green desktop-only" title="Toets of je dit begrijpt met een oefening">Oefen dit concept</a>
 {{/if}}
 {{#if video.extra_properties }}
 {{#if video.extra_properties.explore_url }}
