--- a/templates/coach_resources/toolkit_content/first-week.html
+++ b/templates/coach_resources/toolkit_content/first-week.html
@@ -2,7 +2,7 @@
 
 {% block col1content %}
 		
-	<h1>Starting out on Khan Academy</h1>
+	<h1>Aan de slag met Khan Academie</h1>
 	<hr>
 	
 	<p class="lead">Investing time in KA upfront helps introduce students to the site and identify their knowledge gaps.</p>
