Fix email field in report a problem form

--- a/templates/reportissue_template.html
+++ b/templates/reportissue_template.html
@@ -31,7 +31,7 @@ function submitForm(value)
 
         <form method="POST" action="/reportissue">
         <label style="display:block;">Email</label>
-        <input name="email" type="text" id="issue-description" class="simple-input ui-corner-all blur-on-esc" placeholder="Email" style="width:400px"></input>
+        <input name="ucontact" type="text" id="issue-description" class="simple-input ui-corner-all blur-on-esc" placeholder="Email" style="width:400px"></input>
         <br />
         <label style="display:block;">Title</label>
         <input name="title" type="text" id="issue-title" class="simple-input ui-corner-all blur-on-esc" placeholder="Title" style="width:400px"/>
