--- a/javascript/profile-package/vital-statistics.handlebars
+++ b/javascript/profile-package/vital-statistics.handlebars
@@ -4,25 +4,25 @@
             <div id="graph-container">
                 <div class="vital-statistics-description">
                     <div class="activity">
-                        Shows how much work you're doing each day.
+                        Laat zien hoe veel werk je verricht elke dag.
                     </div>
                     <div class="focus">
-                        Shows how well you've focused on skills and topic areas.
+                        Laat zien hoe goed je bent in bepaalde vaardigheden en bepaalde onderwerpen.
                     </div>
                     <div class="skill-progress">
-                        Shows which skills you've worked on and completed.
+                        Laat zien aan welke vaardigheden je gewerkt hebt en welke je hebt voltooid.
                         <span class="graph-options">
-                            <span class="progress-legend exercise-color started">Started</span>
-                            <span class="progress-legend exercise-color proficient">Proficient</span>
-                            <span class="progress-legend exercise-color review light">Review</span>
-                            <span class="progress-legend exercise-color struggling">Struggling</span>
+                            <span class="progress-legend exercise-color started">Beginner</span>
+                            <span class="progress-legend exercise-color proficient">Gevorderde</span>
+                            <span class="progress-legend exercise-color review light">Bespreken</span>
+                            <span class="progress-legend exercise-color struggling">Moeite</span>
                         </span>
                     </div>
                     <div class="skill-progress-over-time">
-                        Shows how many skills you've completed over time.
+                        Laat zien hoe veel vaardigheden je hebt voltooid de laatste tijd.
                     </div>
                     <div class="problems">
-                        Click a bar to view more detailed problem information.
+                        Klik om gedetailleerde informatie op te vragen.
                     </div>
                 </div>
                 <div id="graph-progress-bar" class="throbber-progress-bar"></div>
