--- a/templates/reportproblem.html
+++ b/templates/reportproblem.html
@@ -3,5 +3,5 @@
 {% block have_an_issue %}Loop je tegen een probleem aan?{% endblock have_an_issue %}
 {% block exercise_warning %}<p><strong style="color:red;">We leggen je hier uit hoe je een algemeen probleem met de website kunt melden. Wanneer je tegen een probleem aanloopt bij het maken van de oefeningen, meld dit probleem dan alsjeblieft bij de betreffende oefening door te klikken op de &ldquo;Meld een probleem&rdquo; knop onderaan de pagina van die oefening. </strong></p>{% endblock exercise_warning %}
 {% block submitted_the_issue %}probleem gemeld{% endblock submitted_the_issue %}
-{% block list_of_issues_link %}<a href="http://code.google.com/p/khanacademy/issues/list?can=2&q=Status:Accepted,Started%20Type:Defect&sort=-stars&colspec=Summary">list of known problems</a>{% endblock list_of_issues_link %}
+{% block list_of_issues_link %}<a href="http://code.google.com/p/khanacademy/issues/list?can=2&q=Status:Accepted,Started%20Type:Defect&sort=-stars&colspec=Summary">lijst met bekende problemen</a>{% endblock list_of_issues_link %}
 {% block new_issue_link %}<a href="http://code.google.com/p/khanacademy/issues/entry?template=Defect%20report%20from%20user&labels=Referer-{{referer|urlencode}},Type-Defect,UserAgent-{{user_agent|urlencode}},{{issue_labels|urlencode}}">new problem form</a>{% endblock new_issue_link %}
