--- a/javascript/profile-package/user-card.handlebars
+++ b/javascript/profile-package/user-card.handlebars
@@ -5,7 +5,7 @@
       </div>
       <div class="user-deets">
           {{#if isPhantom}}
-             <a href="{{toLoginRedirectHref "/profile"}}" class="simple-button green">Log in to claim your profile</a>
+             <a href="{{toLoginRedirectHref "/profile"}}" class="simple-button green">Meld je aan bij je eigen profiel</a>
           {{else}}
           <div class="nickname-container{{#if isFullyEditable}} fully-editable{{/if}}">
               <span class="nickname">{{nickname}}</span>
