--- a/templates/coach_resources/view_toolkit.html
+++ b/templates/coach_resources/view_toolkit.html
@@ -117,7 +117,7 @@
 
 {% block pagesubmenu %}
 <span class="breadcrumbs_nav">
-    <a href="/coach/resources" id="teacher-resources" class="selected">Middelen voor de leraar(es)<span style="font-size:8px;color:orange;"> NIEUW</span>
+    <a href="/coach/resources" id="teacher-resources" class="selected">Middelen voor de lera(a)r(es)<span style="font-size:8px;color:orange;"> NIEUW</span>
     <a href="/students" id="manage-students">Manage leerlingen</a>
     <a href="/class_profile" id="class-stats">Klassen overzicht</a>
 </span>
