--- a/templates/viewclassprofile.html
+++ b/templates/viewclassprofile.html
@@ -16,7 +16,7 @@
 
 {% block pagesubmenu %}
 <span class="breadcrumbs_nav">
-    <a href="{% if user_data.is_demo %}/logout?continue={% endif %}/coach/resources" id="teacher-resources" {%if user_data.is_demo %}class="show-demo-dialog"{% endif %}>Middelen voor de leraar(es)<span style="font-size:8px;color:orange;font-weight:bold"> NEW</span></a>
+    <a href="{% if user_data.is_demo %}/logout?continue={% endif %}/coach/resources" id="teacher-resources" {%if user_data.is_demo %}class="show-demo-dialog"{% endif %}>Middelen voor de lera(a)r(es)<span style="font-size:8px;color:orange;font-weight:bold"> NEW</span></a>
     <a href="{% if user_data.is_demo %}/logout?continue={% endif %}/students" id="manage-students" {%if user_data.is_demo %}class="show-demo-dialog"{% endif %}>Manage leerlingen</a>
     <a href="{% if user_data.is_demo %}/logout?continue={% endif %}/class_profile" id="class-stats" class="selected{%if user_data.is_demo %} show-demo-dialog{% endif %}">Klassen overzicht voor</a>
     <span id="studentlists_dropdown" style="display:none;">
