--- a/templates/viewstudentlists.html
+++ b/templates/viewstudentlists.html
@@ -9,7 +9,7 @@
 
 {% block pagesubmenu %}
 <span class="breadcrumbs_nav">
-    <a href="/coach/resources" id="teacher-resources">Middelen voor de leraar(es)<span style="font-size:8px;color:orange;font-weight:bold"> NEW</span>
+    <a href="/coach/resources" id="teacher-resources">Middelen voor de lera(a)r(es)<span style="font-size:8px;color:orange;font-weight:bold"> NEW</span>
     <a href="/students" id="manage-students" class="selected">Manage Leerlingen</a>
     <a href="/class_profile" id="class-stats">Klassen overzicht</a>
 </span>
