--- a/javascript/profile-package/recent-activity-list.handlebars
+++ b/javascript/profile-package/recent-activity-list.handlebars
@@ -7,6 +7,6 @@
         </ul>
     </div>
 {{else}}
-    Recent <a href="/#browse">video</a>, <a href="/exercisedashboard">exercise</a>, and <a href="#achievements">badge</a> activity will show up here.
+    Laatste <a href="/#browse">video</a>, <a href="/exercisedashboard">oefening</a> en <a href="#achievements">behaalde badge</a> zullen hier te zien zijn.
 {{/if}}
 
