--- a/javascript/shared-package/goal-new.handlebars
+++ b/javascript/shared-package/goal-new.handlebars
@@ -1,93 +1,91 @@
 <div class="goalpicker">
-    <h3>Start a new goal</h3>
+    <h3>Begin met een nieuwe doelstelling!</h3>
 
         <div class="small newgoal goal five_videos {{#if hasVideo}}disabled{{/if}}">
-            <h4><a href="#five-videos">Five Videos</a></h4>
+            <h4><a href="#five-videos">Vijf Video&#39;s</a></h4>
             <div class="objective_list">
                 <ul class="inline-list objective-list">
                 {{#repeat 5}}
                     <li class="objective" style="width: 20%">
                         <a class="objective simple-button video blue" href="#">
-                            <span class="objective-description">Any video</span>
+                            <span class="objective-description">willekeurige video</span>
                         </a>
                     </li>
                 {{/repeat}}
                 </ul>
             </div>
             <div class="info pos-right">
-                <p>Watch any five videos to complete this goal!</p>
+                <p>Bekijk vijf willekeurige video&#39;s om deze doelstelling te behalen!!</p>
                 <p>
-                    As you finish more of your
-                    goal, the goal icons will fill
-                    in until it's a solid bar.
+                    Des te meer doelstellingen je haalt,
+                    des te verder zal het doelstellingen balkje gevuld zijn.
                 </p>
-                <button class="simple-button green">start it!</button>
+                <button class="simple-button green">start!</button>
             </div>
         </div>
 
         <div class="small newgoal goal five_exercises {{#if hasExercise}}disabled{{/if}}">
-            <h4><a href="#five-exercises">Five Skills</a></h4>
+            <h4><a href="#five-exercises">Vijf vaardigheden</a></h4>
             <div class="objective_list">
                 <ul class="inline-list objective-list">
                 {{#repeat 5}}
                     <li class="objective" style="width: 20%">
                         <a class="objective simple-button GoalObjectiveAnyExerciseProficiency blue" href="#">
-                            <span class="objective-description">Any skill</span>
+                            <span class="objective-description">Willekeurige vaardigheid</span>
                         </a>
                     </li>
                 {{/repeat}}
                 </ul>
             </div>
             <div class="info pos-left">
-                <p>Complete any five skills!</p>
+                <p>Voltooi vijf willekeurige vaardigheden!</p>
                 <p>
-                    As you finish more of your
-                    goal, the goal icons will fill
-                    in until it's a solid bar.
+                    Des te meer doelstellingen je haalt,
+                    des te verder zal het doelstellingen balkje gevuld zijn.
                 </p>
-                <button class="simple-button green">start it!</button>
+                <button class="simple-button green">start!</button>
             </div>
         </div>
 
         <div class="big newgoal goal custom">
-            <h4><a href="#custom-goal">Custom Goal</a></h4>
+            <h4><a href="#custom-goal">Eigen doelstelling</a></h4>
             <ul class="inline-list objective-list">
                 <li class="objective" style="width: 16.67%;">
                     <a class="objective simple-button blue exercise" href="#">
-                        <span class="objective-description">Adding decimals</span>
+                        <span class="objective-description">Kommagetallen optellen</span>
                     </a>
                 </li>
                 <li class="objective" style="width: 16.67%;">
                     <a class="objective simple-button blue exercise" href="#">
-                        <span class="objective-description">Multiplication 2</span>
+                        <span class="objective-description">Vermenigvuldigen 2</span>
                     </a>
                 </li>
                 <li class="objective" style="width: 16.67%;">
                     <a class="objective simple-button blue exercise" href="#">
-                        <span class="objective-description">Arithmetic word problems 2</span>
+                        <span class="objective-description">Redactiesommen 2</span>
                     </a>
                 </li>
                 <li class="objective" style="width: 16.67%;">
                     <a class="objective simple-button blue video" href="#">
-                        <span class="objective-description">Algebra: graphing lines 1</span>
+                        <span class="objective-description">Algebra: Grafieken van lijnen 1</span>
                     </a>
                 </li>
                 <li class="objective" style="width: 16.67%;">
                     <a class="objective simple-button blue video" href="#">
-                        <span class="objective-description">Quadratic Equation part 2</span>
+                        <span class="objective-description">Kwadratische vergelijkingen deel 2</span>
                     </a>
                 </li>
                 <li class="objective" style="width: 16.67%;">
                     <a class="objective simple-button blue exercise" href="#" data-progress="0
-                        " style="border-right-style: none; border-right-width: initial; border-right-color: initial;"><span class="objective-description">Reading tables 2</span>
+                        " style="border-right-style: none; border-right-width: initial; border-right-color: initial;"><span class="objective-description">Tabellen lezen 2</span>
                     </a>
                 </li>
             </ul>
 
             <div class="info pos-top">
-                <p>Custom goals can contain skills or videos that you pick yourself.</p>
+                <p>Eigen doelstellingen kunnen vaardigheden en video&#39;s zijn die je zelf gekozen hebt.</p>
 
-                <button class="simple-button green">start it!</button>
+                <button class="simple-button green">start!</button>
             </div>
 
         </div>
