--- a/templates/coach_resources/view_resources.html
+++ b/templates/coach_resources/view_resources.html
@@ -74,9 +74,9 @@
         </div>
         <div class="bigcallout span6 offset1">
             <h2>Geef jouw klas een boost</h2>
-            <p>Bezoek onze gereedschapskist voor leraren en ontdek alle geweldige dingen die andere leraren en coaches doen met de Khan Academie.
+            <p>Bezoek onze toolkit voor leraren en ontdek alle geweldige dingen die andere leraren en coaches doen met de Khan Academie.
             <p>We willen onze coaches graag eerste rangs middelen bieden. Gratis. Altijd. Uitgebreide informatie en inhoudelijke analyses zijn slechts het begin.</p>
-            <p><a href="/toolkit/" class="simple-button green">Ontdek de gereedschapskist</a></p>
+            <p><a href="/toolkit/" class="simple-button green">Ontdek de toolkit</a></p>
         </div>
     </div>
 
@@ -103,7 +103,7 @@
                 </a>
             </div>
             <h3><a href="http://khanacademy.desk.com">Jouw vragen</a></h3>
-            <p>Vind- en geef antwoord op veelgestelde vragen als: <a href="http://khanacademy.desk.com/customer/portal/articles/414175">Wat is het idee van Khan over het gebruik van de Khan Academie in de klas?</a> <a href="http://khanacademy.desk.com/customer/portal/articles/329324-how-do-i-set-up-a-new-user-account-">Hoe log ik in op de Khan Academie?</a> Of, <a href="http://khanacademy.desk.com/customer/portal/questions/new">voeg je eigen vragen toe</a>.
+            <p>Vind- en geef antwoord op veelgestelde vragen als: <a href="http://www.khanacademie.nl/about/faq"><br>Wat is de Khan Academie? </a> <br> Of, <a href="http://www.khanacademie.nl/about/faq">voeg je eigen vragen toe</a>. <br>(Wordt aangevuld)
         </div>
 
         <div class="span3">
