--- a/templates/nl-content/faq.html
+++ b/templates/nl-content/faq.html
@@ -83,7 +83,7 @@
         </div>
     </div>
     <div class="col2 forty-sixty" style="text-align: justify; padding-top: 9px;">
-    
+    <a name="why"><h2>Dit onderdeel wordt binnenkort aangevuld. Vragen kunnen altijd gesteld worden via info@khanacademie.nl of via onze social media kanalen.</h2></a><br><br>
     <a name="why"><h2>Wat is de Khan Academie?</h2></a>
     <p>
         De Khan Academie is de Nederlandse versie van de Khan Academy. 
