--- a/templates/viewstudentlists.html
+++ b/templates/viewstudentlists.html
@@ -10,7 +10,7 @@
 {% block pagesubmenu %}
 <span class="breadcrumbs_nav">
     <a href="/coach/resources" id="teacher-resources">Middelen voor de leraar/lerares<span style="font-size:8px;color:orange;font-weight:bold"> NEW</span>
-    <a href="/students" id="manage-students" class="selected">Manage Leerlingen</a>
+    <a href="/students" id="manage-students" class="selected">Beheer Leerlingen</a>
     <a href="/class_profile" id="class-stats">Klassen overzicht</a>
 </span>
 {% endblock pagesubmenu %}
@@ -100,7 +100,7 @@
 
             <a class="delete-button" id="delete-list" href="#"><img src="images/circled_cross.png" title="Delete this list (the students will still appear in 'All students')"/></a>
         </span>
-        <h2 class="visited-no-recolor"><a href="/class_profile?student_list=allstudents" title="View the class statistics page for this set of students">All leerlingen</a></h2>
+        <h2 class="visited-no-recolor"><a href="/class_profile?student_list=allstudents" title="View the class statistics page for this set of students">Alle leerlingen</a></h2>
         <span id="nstudents">0 studenten</span>
         <a id="create-child-button" style="display: none"
             href="/createchild"
