--- a/templates/page_footer_short.html
+++ b/templates/page_footer_short.html
@@ -39,7 +39,7 @@ footer #leaves {
         <a href="/about/faq">FAQ</a>
             <span class="sep">|</span>
             <span class="small-social-links">
-                <a class="google-analytics-link-track youtube" onclick="_gaq.push(['_trackEvent', 'Click', 'Youtube-Subscribe-Header']);" href="http://www.youtube.com/khanacademie" title="Youtube"></a>
+                <a class="google-analytics-link-track youtube" onclick="_gaq.push(['_trackEvent', 'Click', 'Youtube-Subscribe-Header']);" href="http://www.youtube.com/PerceptumNL" target="_blank" title="Youtube"></a>
                 <a class="google-analytics-link-track twitter" onclick="_gaq.push(['_trackEvent', 'Click', 'Twitter-Follow-Header']);" href="http://twitter.com/khanacademie" title="Twitter"></a>
                 <a class="google-analytics-link-track facebook" onclick="_gaq.push(['_trackEvent', 'Click', 'Facebook-Join-Header']);" href="https://www.facebook.com/pages/Khan-Academie/123650984422563" title="Facebook"></a>
             </span>
