--- a/templates/coach_resources/view_resources.html
+++ b/templates/coach_resources/view_resources.html
@@ -10,8 +10,8 @@
 
 {% block pagesubmenu %}
 <span class="breadcrumbs_nav">
-    <a href="/coach/resources" id="teacher-resources" class="selected">Middelen voor de lera(a)r(es)<span style="font-size:8px;color:orange;"> NIEUW</span>
-    <a href="/students" id="manage-students">Manage leerlingen</a>
+    <a href="/coach/resources" id="teacher-resources" class="selected">Middelen voor de leraar/lerares <span style="font-size:8px;color:orange;"> NIEUW</span>
+    <a href="/students" id="manage-students">Beheer leerlingen</a>
     <a href="/class_profile" id="class-stats">Klassen overzicht</a>
 </span>
 {% endblock pagesubmenu %}
@@ -93,7 +93,7 @@
                 </a>
             </div>
             <h3><a href="/toolkit/using-data">Omvangrijke informatie</a></h3>
-            <p>Krijg een volledig beeld van hoe jouw klas presteert op het gebied van<em> lineare vergelijkingen of</em> de voortgang van Jan op het gebied van het <em>optellen van breuken</em>.
+            <p>Krijg een volledig beeld van hoe jouw klas presteert op het gebied van<em> lineare vergelijkingen of</em> de voortgang van Ronald op het gebied van het <em>optellen van breuken</em>.
         </div>
 
         <div class="span3">
