--- a/templates/coach_resources/view_toolkit.html
+++ b/templates/coach_resources/view_toolkit.html
@@ -117,8 +117,8 @@
 
 {% block pagesubmenu %}
 <span class="breadcrumbs_nav">
-    <a href="/coach/resources" id="teacher-resources" class="selected">Middelen voor de lera(a)r(es)<span style="font-size:8px;color:orange;"> NIEUW</span>
-    <a href="/students" id="manage-students">Manage leerlingen</a>
+    <a href="/coach/resources" id="teacher-resources" class="selected">Middelen voor de leraar/lerares<span style="font-size:8px;color:orange;"> NIEUW</span>
+    <a href="/students" id="manage-students">Beheer leerlingen</a>
     <a href="/class_profile" id="class-stats">Klassen overzicht</a>
 </span>
 {% endblock pagesubmenu %}
