--- a/javascript/profile-package/achievements.handlebars
+++ b/javascript/profile-package/achievements.handlebars
@@ -1,12 +1,12 @@
 <div id="achievements" class="{{#if fStandardView}}standard-view{{else}}mobile-view{{/if}}">
   <div id="achievement-list">
     <ul>
-      {{#reverseEach badgeCollections}}
+      {{#each badgeCollections}}
       <li id="category-{{category}}" class="{{toBadgeClassName category}} {{#if userBadges.length}}owned{{/if}}">
         <img src="{{toMediumIconSrc category}}" />
         <div class="label">{{toBadgeLabel category ../fStandardView}}{{#if userBadges.length}} x {{userBadges.length}}{{/if}}</div>
       </li>
-      {{/reverseEach}}
+      {{/each}}
     </ul>
     <div class="clear"></div>
     <div id="badge-container" class="inset-container" style="display: none;">
